# immunization-charts-python

./: .git-changelog.toml  .gitignore  .pre-commit-config.yaml  AGENTS.MD  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.sh  run_web.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: documentation-request.md
.github/workflows/: pre-commit.yaml  test.yml
config/: README.md  disease_map.json  disease_normalization.json  encryption_config.yml  map_school.json  notice_config.yaml  parameters.yaml  phu_aliases.yaml  qr_config.yaml  settings.py  vaccination_reference_en_fr.json  vaccine_reference.json  vaccine_reference.xlsx
config/translations/: en_diseases_chart.json  en_diseases_overdue.json  fr_diseases_chart.json  fr_diseases_overdue.json
docs/: BRANCHING.md  CODE_ANALYSIS_STANDARDS.md  CONTRIBUTING.md  DOCUMENTATION_STANDARDS.md  MIGRATION.md  PDF_VALIDATION.MD  PDF_VALIDATION.md  TESTING_STANDARDS.md
docs/email_package/: Email_Template_Text.md  PHU_Checklist.md  README.md  Student_Overdue_Vaccine_List_Preparation_Process_Pano.md  Template_Overview.md  convert_docs_to_pdf.py
input/: rodent_dataset.xlsx
output/: conf.typ
phu_templates/: README.md
pipeline/: batch_pdfs.py  bundle_pdfs.py  cleanup.py  column_mapper.py  compile_notices.py  config_loader.py  count_pdfs.py  data_models.py  encrypt_notice.py  enums.py  generate_notices.py  generate_qr_codes.py  orchestrator.py  prepare_output.py  preprocess.py  translation_helpers.py  utils.py  validate_pdfs.py  validate_phix.py
plans/: 001-validate-phix-reference.md  002-strategic-testing-refinement.md  003-focused-testing-optimization.md  README.md
scripts/: 2025_mock_generate_template_english.sh  2025_mock_generate_template_english_map.sh  2025_mock_generate_template_french.sh  batch_pdfs.py  cleanup.py  cleanup.sh  compile_notices.py  compile_notices.sh  conf.typ  config_loader.py  count_pdfs.py  count_records.py  data_models.py  encrypt_notice.py  enums.py  generate_mock_template_en.py  generate_mock_template_english.py  generate_mock_template_fr.py  generate_mock_template_french.py  generate_notices.py  generate_notices.sh  generate_notices_map.sh  generate_qr_codes.py  logger_config.py  prepare_output.py  preprocess.py  run_pipeline.py  run_pipeline.sh  run_pipeline_map.sh  summarize_preprocessed_clients.py  utils.py
src/: __init__.py
src/immunization_charts/: __init__.py
templates/: __init__.py  conf.typ  en_template.py  english_template.sh  fr_template.py  french_template.sh
test/: test_preprocess.py
test/python_tests/: test_compile_notices.py  (+3 more)
tests/: __init__.py  conftest.py  test_batch_pdfs.py  test_cleanup.py  test_compile_notices.py  test_count_pdfs.py  test_generate_notices.py  test_generate_qr_codes.py  test_prepare_output.py  test_preprocess.py  test_processor.py  test_run_pipeline.py  test_summarize_preprocessed_clients.py
(+62 files in other folders)
