[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[project]
name = "immunization-charts-python"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "PyYAML",
    "openpyxl",
    "pypdf",
    "typst>=0.13.2",
    "qrcode>=7.4.2",
    "pillow>=10.4.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
viper = "scripts.run_pipeline:main"

[tool.coverage.run]
source = ["scripts"]
omit = ["*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
