[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "templates", "phu_templates"]

[project]
name = "immunization-charts-python"
version = "0.2.0"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "PyYAML",
    "openpyxl",
    "pypdf",
    "qrcode>=7.4.2",
    "pillow>=10.4.0",
    "babel>=2.17.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ty>=0.0.1a24",
    "git-changelog>=2.5.2",
    "pypandoc>=1.15",
]

[project.scripts]
viper = "pipeline.orchestrator:main"

[tool.coverage.run]
source = ["pipeline"]
omit = ["*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "print"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
